using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class GetingCoin : MonoBehaviour
{

}
